--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
-<div class="conteiner">
-<div class="star"></div>
-<div class="triangle1"></div>
-<div class="triangle2"></div>
-<div class="triangle3"></div>
-<div class="trunk"></div>
-<div class="ball1"></div>
-<div class="ball2"></div>
-<div class="ball3"></div>
-<div class="ball4"></div>
-<div class="ball5"></div>
-<div class="ball6"></div>
-</div>
-<h1>Merry Christmas</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To My Friends</title>
+</head>
+<body>
+    <div class="conteiner">
+    <div class="star"></div>
+    <div class="triangle1"></div>
+    <div class="triangle2"></div>
+    <div class="triangle3"></div>
+    <div class="trunk"></div>
+    <div class="ball1"></div>
+    <div class="ball2"></div>
+    <div class="ball3"></div>
+    <div class="ball4"></div>
+    <div class="ball5"></div>
+    <div class="ball6"></div>
+    </div>
+    <h1>Merry Christmas</h1>
+    <script src="tree.js"></script>
+    <link type ="text/css" rel="stylesheet" href="tree.css">
+</body>
+</html>
